src/pages/CreateCommunity/CreateCommunity.module.css
.createBox {
    display: flex;
    justify-self: center;
    flex-direction: column;
    color: #0B2548;
    align-items: center;
    padding: 0px 30px;
    margin: 50px 0;
    width: 800px;
    height: 600px;
    padding: 15px 30px;
    background-color: #D9D9D9;
    border-radius: 25px;
    text-align: center;
}

.titleCreate {
    margin-bottom: 30px;
}

.contentBox{
    display: flex;
    width: 100%;
    height: 100%;
}

.rightBox, .leftBox {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 50%;
    height: 100%;
    padding: 0px 30px;
}

.rightBox {
    position: relative;
    border-left: 1px solid #0B2548;
    gap: 30px;
}

.leftBox {
    border-right: 1px solid #0B2548;
    gap: 40px;
}

.bannerBox, .visibilityBox{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}


.visibilityText, .personalizarText {
    font-size: 20px;
    font-weight: bold;
    align-self: flex-start
}

.visibilityButtons {
    display: flex;
    justify-content: space-around;
    width: 100%;
    margin-top: 10px;
}

.buttonProfessores, .buttonTodos {
    width: 100px;
    padding: 5px 7px;
    background-color: #4dac79;
    color: #FFFFFF;
    border: none;
    border-radius: 25px;
    font-size: 20px;
    font-weight: bold;
    cursor: pointer;
    user-select: none;
    transition: background-color 0.3s ease;
    margin: 0 10px; /* Add margin to create space between buttons */
}

.buttonProfessores{
    width: 150px;
}

.buttonProfessores:hover, .buttonTodos:hover {
    background-color: #196e41;
}

.buttonProfessores:enabled {
    background-color: #196e41;
}

input[type="radio"]:checked+label {
    background-color: #196e41;
    color: white;
    /* border-color: #196e41; */
}

.passwordBox {
    display: flex;
    margin-top: 10px;
    width: 100%;
    align-items: center;
    justify-content: space-between;

}
.passwordTitle{
    font-size: 18px;
}

.passwordCheck {
    appearance: none;
    width: 18px;
    height: 18px;
    border: 2px solid #0B2548;
    border-radius: 3px;
    cursor: pointer;
    position: relative;
    outline: none;
    transition: background-color 0.3s ease, border-color 0.3s ease;
}

.passwordCheck:checked {
    background-color: #0B2548;
    border-color: #0B2548;
}

.passwordCheck:checked::after {
    content: '';
    position: absolute;
    top: 2px;
    left: 6px;
    width: 4px;
    height: 8px;
    border: solid white;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
}

.none{
    display: none;
}

.fileInput {
    display: none;
}

.fileUploadButton {
    display: flex;
    align-items: center;
    justify-content: space-around;
    background-color: #FFFFFF;
    width: 230px;
    color: #555555;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    border-radius: 15px;
    margin-top: 10px;
    transition: background-color 0.3s ease;
}

.fileUploadButton img {
    width: 25px;
}

.fileUploadButton:hover {
    opacity: 0.7;
}

.previewContainer {
    text-align: center;
    margin-top: 0;
    width: 100%;
    margin-top: 10px;
}

.previewImage {
    max-width: 270px;
    max-height: 150px;
    object-fit: cover;
    border-radius: 10px;
}

.skeleton {
    background-color: #b1b1b183;
    border-radius: 10px;
    width: 230px;
    height: 150px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #555555;
    font-size: 16px;
    margin-top: 10px;
}

.buttonCreate {
    position: absolute;
    bottom: 0px;
    right: 0px;
    display: flex;
    justify-content: center;
    width: 200px;
    padding: 7px 10px;
    background-color: #0B2548;
    color: #FFFFFF;
    border: none;
    border-radius: 25px;
    font-size: 18px;
    font-weight: bold;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.buttonCreate:disabled {
    cursor: not-allowed;
}

.buttonCreate:hover {
    background-color: #041122;
}

